# second_brain_chat

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-ci.yml
second_brain_chat/: chat_bot.py  freeplane_parser.py  index.py  memory_chat.py  mindmap_chat.py
tests/: test_chat_bot.py  test_freeplane_parser.py  test_memory.py  test_mindmap_chat.py
