[tool.poetry]
name = "second-brain-chat"
version = "0.1.0"
description = "LLM-powered chat interface for navigating second-brain Freeplane mindmaps"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "second_brain_chat" }]

# Dependencies needed at runtime
[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.1.0"
langchain-community = "0.0.9"
langchain-openai = "0.0.1"
chromadb = "0.3.29"
sentence-transformers = "2.2.2"
python-dotenv = "^1.0.1"  # for loading .env into os.environ

# Developer-only tools (not needed in production)
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"   # test runner
ruff = "^0.3.4"     # fast linter
mypy = "^1.9.0"     # static type checker (optional, but helpful)

# Tells pytest where to look for test files
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ruff linter config
[tool.ruff]
line-length = 100
extend-select = ["I", "F", "E", "W"]

# Type checking settings for mypy
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Poetry build backend (always needed)
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
